fix: build gradle to downgrade springboot for spark