@@ -1,6 +1,8 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.4'
+    // https://stackoverflow.com/a/75690526
+    // Spark requires Spring boot 2.7 version
+    id 'org.springframework.boot' version '2.7.14'
     id 'io.spring.dependency-management' version '1.1.3'
 }
 
@@ -22,6 +24,11 @@ dependencies {
     implementation 'org.apache.spark:spark-sql_2.12:3.5.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+}
+
+bootRun {
+    // https://stackoverflow.com/a/69179997
+    jvmArgs = ["--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"]
 }
 
 tasks.named('test') {
